<resources>
    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_thin">sans-serif-thin</string>
    <string name="app_name">Applock Fingerprint Unlock</string>
    <string name="wellcome_text_btn_skip">Skip</string>
    <string name="wellcome_text_btn_next">Next</string>
    <string name="notifi_permisstion_text_title_draw_over_app">Draw over other app</string>
    <string name="notifi_permisstion_text_body">Tap to grant permisstions</string>
    <string name="notifi_permisstion_text_title_usager_access">Usager Access</string>
    <string name="set_pin_confirm_pin_code">Confirm your pin code</string>
    <string name="notifi_permisstion_text_title_accseccibility">Accessibility</string>
    <string name="set_pin_txt_body_set_4_pin_code">To lock applications you need to set up PIN code \n (4 number)</string>
    <string name="set_pin_txt_title_set_up_pin_code">Set up PIN code</string>
    <string name="set_pin_confirm_pin_code1_1">Enter your PIN code</string>
    <string name="set_pin_confirm_pin_code1_2">Confirm your PIN code</string>
    <string name="set_pin_fail_pin_code">Wrong code</string>
    <string name="list_app_txt_title_locked">Locked Apps</string>
    <string name="list_app_txt_title_unlock">All Installed &amp; System Apps</string>
    <string name="request_draw_over">Vẽ trên</string>
    <string name="content_request_draw_over">Vẽ</string>
    <string name="title_request_draw_over">Vẽ</string>
    <string name="hint_pin_lock">Enter your pin</string>
    <string name="wellcome_1_txt_title">Wellcome</string>
    <string name="wellcome_1_txt_body">With our application you can easily lock access to any application installed  on device as well as to the most important system  settings like Wi-Fi, Bluetooth and Sync.</string>
    <string name="wellcome_2_txt_title">How to applock</string>
    <string name="wellcome_2_txt_body">Just find the desired application in categorized list or by search and tap on it lock or unlock.</string>
    <string name="wellcome_3_txt_title">Permissions</string>
    <string name="wellcome_3_txt_body">Permissions allow the app to show the PIN code interface prior to entering a locked app. If not granted - the app will not be able to show  the lock, thus the protection of the apps will be disabled.</string>
    <string name="dialog_request_draw_over_app_title">Draw over other app</string>
    <string name="dialog_request_draw_over_app_body">Permistion to draw over other apps allows the app to show the PIN code interface prior to entering a locked app. If not granted - the app will not be able  to show the lock, thus the protection of the apps will be disable.</string>
    <string name="dialog_request_usager_access_title">Usager Access</string>
    <string name="dialog_request_usager_access_body">Permission for usage access is necessary so that the app coild analyza whether any of the locked apps are currently in use and have to be protected. If permisstion is not granted - the Applock fo Me will not be able to determine whether the app that needs protection is launched and will not be able to show the lock interface on the necessary app. We do not collect any parsonal data and the privacy of your device is not harmed by granting this permission.</string>
    <string name="dialog_request_accessibility_title">Accessibility</string>
    <string name="dialog_request_accessibility_body">ble</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_unlock_all">Unlock all</string>
    <string name="app_settings">Settings</string>
    <string name="settings_change_pin_code">Change PIN code</string>
    <string name="settings_mode">Change Mode</string>
    <string name="settings_mode_lock_every_time">Auto lock every time</string>
    <string name="settings_enable_lock">Enable unlock by fingerprint</string>
    <string name="change_mode">This is developing</string>
    <string name="wrong_pin">* Wrong pin code</string>
    <string name="wrong_finger">Wrong Fingerprint try agian</string>
    <string name="txt_current_pin">Current PIN code</string>
    <string name="txt_new_pin_1">Enter new PIN</string>
    <string name="txt_new_pin_2">Confirm new PIN</string>
    <string name="facebook_app_id">700583433473618</string>
    <string name="dialog_unlock_all_app_title">Unlock all apps</string>
    <string name="dialog_unlock_all_app_body">This will unlock all apps</string>
    <string name="MainScreen_Header_NativeAds_Height120">700583433473618_706421649556463</string>
    <string name="MainScreen_Footer_NativeAds_Height300">700583433473618_706421739556454</string>
    <string name="SettingScreen_Footer_NativeAds_Height300">700583433473618_706421596223135</string>
    <string name="LockAppsScreen_Header_ListNativeAds_Height300">700583433473618_706421226223172</string>
</resources>
